--- a/products_api/serverless.yml
+++ b/products_api/serverless.yml
@@ -120,8 +120,8 @@ functions:
             passThrough: NEVER
             template:
               application/json: ${file(create_products_template.vtl)}
-            schema:
-              application/json: ${file(schemas/create_products_schema.json)}
+            # schema:
+            #   application/json: ${file(schemas/create_products_schema.json)}
   getProducts:
     name: ${self:provider.stage}-${self:service}-GetProducts
     description: Responsible for retrieving products
