--- a/products_api/serverless.yml
+++ b/products_api/serverless.yml
@@ -118,8 +118,8 @@ functions:
               - X-Amz-User-Agent
           request:
             passThrough: NEVER
-            schema:
-              application/json: ${file(schemas/create_products_schema.json)}
+            schemas:
+              application/json: ${file(schemas/create_products.json)}
             template:
               application/json: ${file(create_products_template.vtl)}
   getProducts:
