--- a/products_api/serverless.yml
+++ b/products_api/serverless.yml
@@ -122,7 +122,7 @@ functions:
               application/json: ${file(schemas/create_products.json)}
             template:
               application/json: ${file(templates/create_products_request.vtl)}
-          responses:
+          response:
             statusCodes:
               200:
                 template:
