--- a/products_api/serverless.yml
+++ b/products_api/serverless.yml
@@ -123,8 +123,7 @@ functions:
             template:
               application/json: ${file(templates/create_products_request.vtl)}
           response:
-            template:
-              application/json: ${file(templates/create_products_response.vtl)}
+            template: ${file(templates/create_products_response.vtl)}
 
   getProducts:
     name: ${self:provider.stage}-${self:service}-GetProducts
