--- a/products_api/serverless.yml
+++ b/products_api/serverless.yml
@@ -74,6 +74,8 @@ functions:
     description: Responsible for creating new products
     runtime: python3.9
     timeout: 10
+    layers:
+      - "${ssm:/${self:provider.stage}/layers/CommonLayer}"
     package:
       include:
         - ../common/models/product.py
